# osquery-extension

./: .bazeliskrc  .gitignore  .testcoverage.yml  BUILD  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  macadmins.mk  main.go  main_test.go  rules.bzl  write_version_config.sh
.claude/: settings.local.json
.github/workflows/: build_macadmins_extension.yml  coverage.yml  lint.yml  test.yml
macos_profiles/: macos_profiles.go
pkg/utils/: BUILD.bazel  build.go  exec_mocks.go  exec_test.go  osquery.go  osquery_test.go  utils.go  utils_mocks.go  utils_test.go
tables/alt_system_info/: BUILD.bazel  alt_system_info.go  alt_system_info_test.go
tables/authdb/: BUILD.bazel  authdb.go  authdb_test.go
tables/chromeuserprofiles/: BUILD.bazel  chrome_user_profiles.go  chrome_user_profiles_test.go
tables/crowdstrike_falcon/: BUILD.bazel  crowdstrike_falcon.go  crowdstrike_falcon_test.go
tables/crowdstrikefalconagent/: crowdstrikefalconagent.go  crowdstrikefalconagent_test.go
tables/dockutil/: BUILD.bazel  dockutil.go  dockutil_test.go
tables/energyimpact/: BUILD.bazel  energy_impact.go  energy_impact_test.go  test_powermetrics_output.plist
tables/fileline/: BUILD.bazel  file_line.go  file_line_test.go
tables/filevaultusers/: BUILD.bazel  filevaultusers.go  filevaultusers_test.go
tables/localnetworkpermissions/: BUILD.bazel  local_network_permissions.go  local_network_permissions_test.go  test_networkextension.plist
tables/macos_profiles/: BUILD.bazel  macos_profiles.go  macos_profiles_test.go  test_profiles_stdout.plist
tables/macos_rsr/: rsr.go  rsr_test.go
tables/macosrsr/: BUILD.bazel  rsr.go  rsr_test.go  test_SystemVersion.plist
tables/mdm/: BUILD.bazel  mdm.go  mdm_test.go
tables/munki/: BUILD.bazel  munki.go  munki_test.go  test_ManagedInstallReport.plist  test_ManagedInstallReport_munki7.plist  test_ManagedInstallReport_with_pending.plist
tables/netskope/: BUILD.bazel  netskope.go  netskope_test.go
tables/networkquality/: BUILD.bazel  networkquality.go  networkquality_test.go
tables/pendingappleupdates/: BUILD.bazel  pendingappleupdates.go  pendingappleupdates_test.go
tables/puppet/: BUILD.bazel  puppet_facts.go  puppet_info.go  puppet_logs.go  puppet_state.go  puppet_test.go  yaml.go
tables/socpower/: BUILD.bazel  soc_power.go  soc_power_test.go  test_powermetrics_output.plist
tables/sofa/: BUILD.bazel  client.go  client_test.go  sofa_cves.go  sofa_cves_test.go  sofa_info.go  sofa_info_test.go  test_etag.txt  test_invalid_hash_data.json  test_invalid_timestamp.json
tables/thermalthrottling/: BUILD.bazel  test_powermetrics_output.plist  thermal_throttling.go  thermal_throttling_test.go
tables/unifiedlog/: BUILD.bazel  unified_log.go  unified_log_test.go
tables/wifi_network/: BUILD.bazel  wdutil_out.txt  wifi_network.go  wifi_network_test.go
tools/: bazel_to_builddir.sh
