load("@bazel_gazelle//:def.bzl", "gazelle")
# load(":rules.bzl", "foo_binary")

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/macadmins/osquery-extension
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

genrule(
    name = "version_config",
    srcs = [
        "VERSION",
        "write_version_config.sh",
    ],  # Ensure dependencies are listed
    outs = ["version_config.go"],
    cmd = "$(location write_version_config.sh) $@",
    stamp = 1,
    tools = ["write_version_config.sh"],
)

go_library(
    name = "osquery-extension_lib",
    # keep
    srcs = [
        "main.go",
        ":version_config",
    ],
    importpath = "github.com/macadmins/osquery-extension",
    visibility = ["//visibility:private"],
    deps = [
        "//tables/alt_system_info",
        "//tables/authdb",
        "//tables/chromeuserprofiles",
        "//tables/fileline",
        "//tables/filevaultusers",
        "//tables/macos_profiles",
        "//tables/macosrsr",
        "//tables/mdm",
        "//tables/munki",
        "//tables/networkquality",
        "//tables/pendingappleupdates",
        "//tables/puppet",
        "//tables/sofa",
        "//tables/unifiedlog",
        "//tables/wifi_network",
        "@com_github_osquery_osquery_go//:go_default_library",
        "@com_github_osquery_osquery_go//plugin/table:go_default_library",
    ],
)

go_binary(
    name = "osquery-extension-mac-arm",
    embed = [":osquery-extension_lib"],
    goarch = "arm64",
    goos = "darwin",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "osquery-extension-mac-amd",
    embed = [":osquery-extension_lib"],
    goarch = "amd64",
    goos = "darwin",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "osquery-extension-win-arm",
    embed = [":osquery-extension_lib"],
    goarch = "arm64",
    goos = "windows",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "osquery-extension-win-amd",
    embed = [":osquery-extension_lib"],
    goarch = "amd64",
    goos = "windows",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "osquery-extension-linux-amd",
    embed = [":osquery-extension_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "osquery-extension-linux-arm",
    embed = [":osquery-extension_lib"],
    goarch = "arm64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
