load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = [
        "exec.go",
        "exec_mocks.go",
        "osquery.go",
        "utils.go",
    ],
    importpath = "github.com/macadmins/osquery-extension/pkg/utils",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/osquery/osquery-go"],
)

go_test(
    name = "utils_test",
    srcs = [
        "exec_test.go",
        "osquery_test.go",
        "utils_test.go",
    ],
    embed = [":utils"],
    deps = [
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
    ],
)
