load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = [
        "exec.go",
        "exec_mocks.go",
        "osquery.go",
        "utils.go",
        "utils_mocks.go",
    ],
    importpath = "github.com/macadmins/osquery-extension/pkg/utils",
    visibility = ["//visibility:public"],
    deps = ["@com_github_osquery_osquery_go//:osquery-go"],
)

go_test(
    name = "utils_test",
    srcs = [
        "exec_test.go",
        "osquery_test.go",
        "utils_test.go",
    ],
    embed = [":utils"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
