load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "alt_system_info",
    srcs = ["alt_system_info.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/alt_system_info",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_groob_plist//:plist",
        "@com_github_osquery_osquery_go//plugin/table",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "alt_system_info_test",
    srcs = ["alt_system_info_test.go"],
    deps = [
        ":alt_system_info",
        "//pkg/utils",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
