load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "alt_system_info",
    srcs = ["alt_system_info.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/alt_system_info",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "//vendor/github.com/micromdm/plist",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/golang.org/x/sync/errgroup",
    ],
)

go_test(
    name = "alt_system_info_test",
    srcs = ["alt_system_info_test.go"],
    deps = [
        ":alt_system_info",
        "//pkg/utils",
        "//vendor/github.com/stretchr/testify/assert",
        "//vendor/github.com/stretchr/testify/require",
    ],
)
