load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "authdb",
    srcs = ["authdb.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/authdb",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "//vendor/github.com/micromdm/plist",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
    ],
)

go_test(
    name = "authdb_test",
    srcs = ["authdb_test.go"],
    embed = [":authdb"],
    deps = [
        "//pkg/utils",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)
