load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "chromeuserprofiles",
    srcs = ["chrome_user_profiles.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/chromeuserprofiles",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_pkg_errors//:errors",
    ],
)
