load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "chromeuserprofiles",
    srcs = ["chrome_user_profiles.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/chromeuserprofiles",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/pkg/errors",
    ],
)

go_test(
    name = "chromeuserprofiles_test",
    srcs = ["chrome_user_profiles_test.go"],
    embed = [":chromeuserprofiles"],
    deps = ["//vendor/github.com/stretchr/testify/assert"],
)
