load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "crowdstrike_falcon",
    srcs = ["crowdstrike_falcon.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/crowdstrike_falcon",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_groob_plist//:plist",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "crowdstrike_falcon_test",
    srcs = ["crowdstrike_falcon_test.go"],
    embed = [":crowdstrike_falcon"],
    deps = [
        "//pkg/utils",
        "@com_github_stretchr_testify//assert",
    ],
)
