load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dockutil",
    srcs = ["dockutil.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/dockutil",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "dockutil_test",
    srcs = ["dockutil_test.go"],
    embed = [":dockutil"],
    deps = [
        "//pkg/utils",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
