load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "energyimpact",
    srcs = ["energy_impact.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/energyimpact",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_micromdm_plist//:plist",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "energyimpact_test",
    srcs = ["energy_impact_test.go"],
    embed = [":energyimpact"],
    embedsrcs = ["test_powermetrics_output.plist"],
    deps = [
        "//pkg/utils",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_stretchr_testify//assert",
    ],
)
