load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "fileline",
    srcs = ["file_line.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/fileline",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
    ],
)
