load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "filevaultusers",
    srcs = ["filevaultusers.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/filevaultusers",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/pkg/errors",
    ],
)

go_test(
    name = "filevaultusers_test",
    srcs = ["filevaultusers_test.go"],
    embed = [":filevaultusers"],
    deps = ["//vendor/github.com/stretchr/testify/assert"],
)
