load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "macos_profiles",
    srcs = ["macos_profiles.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/macos_profiles",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/micromdm/plist",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/pkg/errors",
    ],
)

go_test(
    name = "macos_profiles_test",
    srcs = ["macos_profiles_test.go"],
    embed = [":macos_profiles"],
    embedsrcs = ["test_profiles_stdout.plist"],
    deps = ["//vendor/github.com/stretchr/testify/assert"],
)
