load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "macos_profiles",
    srcs = ["macos_profiles.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/macos_profiles",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_micromdm_plist//:go_default_library",
        "@com_github_osquery_osquery_go//plugin/table:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "macos_profiles_test",
    srcs = ["macos_profiles_test.go"],
    embed = [":macos_profiles"],
    embedsrcs = ["test_profiles_stdout.plist"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
