load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "macosrsr",
    srcs = ["rsr.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/macosrsr",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/micromdm/plist",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/pkg/errors",
    ],
)

go_test(
    name = "macosrsr_test",
    srcs = ["rsr_test.go"],
    embed = [":macosrsr"],
    embedsrcs = ["test_SystemVersion.plist"],
    deps = ["//vendor/github.com/stretchr/testify/assert"],
)
