load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "macosrsr",
    srcs = ["rsr.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/macosrsr",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_micromdm_plist//:plist",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "macosrsr_test",
    srcs = ["rsr_test.go"],
    embed = [":macosrsr"],
    embedsrcs = ["test_SystemVersion.plist"],
    deps = ["@com_github_stretchr_testify//assert"],
)
