load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mdm",
    srcs = ["mdm.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/mdm",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "//vendor/github.com/micromdm/plist",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/pkg/errors",
    ],
)

go_test(
    name = "mdm_test",
    srcs = ["mdm_test.go"],
    embed = [":mdm"],
    deps = [
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)
