load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "munki",
    srcs = ["munki.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/munki",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "//vendor/github.com/micromdm/plist",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/pkg/errors",
    ],
)

go_test(
    name = "munki_test",
    srcs = ["munki_test.go"],
    embed = [":munki"],
    embedsrcs = ["test_ManagedInstallReport.plist"],
    deps = [
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)
