load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "munki",
    srcs = ["munki.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/munki",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_micromdm_plist//:plist",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "munki_test",
    srcs = ["munki_test.go"],
    embed = [":munki"],
    embedsrcs = [
        "test_ManagedInstallReport.plist",
        "test_ManagedInstallReport_munki7.plist",
    ],
    deps = [
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_stretchr_testify//assert",
    ],
)
