load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "netskope",
    srcs = ["netskope.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/netskope",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "netskope_test",
    srcs = ["netskope_test.go"],
    embed = [":netskope"],
    deps = [
        "//pkg/utils",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_pkg_errors//:errors",
        "@com_github_stretchr_testify//assert",
    ],
)
