load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "networkquality",
    srcs = ["networkquality.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/networkquality",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/pkg/errors",
    ],
)
