load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "networkquality",
    srcs = ["networkquality.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/networkquality",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_osquery_osquery_go//plugin/table:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
