load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "networkquality",
    srcs = ["networkquality.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/networkquality",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "networkquality_test",
    srcs = ["networkquality_test.go"],
    embed = [":networkquality"],
    deps = [
        "//pkg/utils",
        "@com_github_stretchr_testify//assert",
    ],
)
