load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pendingappleupdates",
    srcs = ["pendingappleupdates.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/pendingappleupdates",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_groob_plist//:plist",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_pkg_errors//:errors",
    ],
)
