load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pendingappleupdates",
    srcs = ["pendingappleupdates.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/pendingappleupdates",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "//vendor/github.com/micromdm/plist",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/pkg/errors",
    ],
)
