load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "puppet",
    srcs = [
        "puppet_facts.go",
        "puppet_info.go",
        "puppet_logs.go",
        "puppet_state.go",
        "yaml.go",
    ],
    importpath = "github.com/macadmins/osquery-extension/tables/puppet",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/pkg/errors",
        "//vendor/gopkg.in/yaml.v3:yaml_v3",
    ],
)
