load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "socpower",
    srcs = ["soc_power.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/socpower",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_micromdm_plist//:plist",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "socpower_test",
    srcs = ["soc_power_test.go"],
    embed = [":socpower"],
    embedsrcs = ["test_powermetrics_output.plist"],
    deps = [
        "//pkg/utils",
        "@com_github_stretchr_testify//assert",
    ],
)
