load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sofa",
    srcs = [
        "client.go",
        "sofa_cves.go",
        "sofa_info.go",
    ],
    importpath = "github.com/macadmins/osquery-extension/tables/sofa",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "//vendor/github.com/hashicorp/go-version",
        "//vendor/github.com/osquery/osquery-go",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
    ],
)

go_test(
    name = "sofa_test",
    srcs = [
        "client_test.go",
        "sofa_cves_test.go",
        "sofa_info_test.go",
    ],
    embed = [":sofa"],
    embedsrcs = [
        "test_data.json",
        "test_etag.txt",
    ],
    deps = [
        "//pkg/utils",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)
