load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sofa",
    srcs = [
        "client.go",
        "sofa_cves.go",
        "sofa_info.go",
    ],
    importpath = "github.com/macadmins/osquery-extension/tables/sofa",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_hashicorp_go_version//:go_default_library",
        "@com_github_osquery_osquery_go//:go_default_library",
        "@com_github_osquery_osquery_go//plugin/table:go_default_library",
    ],
)

go_test(
    name = "sofa_test",
    srcs = [
        "client_test.go",
        "sofa_cves_test.go",
        "sofa_info_test.go",
    ],
    embed = [":sofa"],
    embedsrcs = [
        "test_data.json",
        "test_etag.txt",
    ],
    deps = [
        "//pkg/utils",
        "@com_github_osquery_osquery_go//plugin/table:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
