load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "thermalthrottling",
    srcs = ["thermal_throttling.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/thermalthrottling",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_micromdm_plist//:plist",
        "@com_github_osquery_osquery_go//plugin/table",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "thermalthrottling_test",
    srcs = ["thermal_throttling_test.go"],
    embed = [":thermalthrottling"],
    embedsrcs = ["test_powermetrics_output.plist"],
    deps = [
        "//pkg/utils",
        "@com_github_stretchr_testify//assert",
    ],
)
