load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "unifiedlog",
    srcs = ["unified_log.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/unifiedlog",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/osquery/osquery-go/plugin/table"],
)
