load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wifi_network",
    srcs = ["wifi_network.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/wifi_network",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "//vendor/github.com/osquery/osquery-go",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/pkg/errors",
    ],
)

go_test(
    name = "wifi_network_test",
    srcs = ["wifi_network_test.go"],
    embed = [":wifi_network"],
    embedsrcs = ["wdutil_out.txt"],
    deps = [
        "//pkg/utils",
        "//vendor/github.com/osquery/osquery-go/plugin/table",
        "//vendor/github.com/stretchr/testify/assert",
    ],
)
