load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wifi_network",
    srcs = ["wifi_network.go"],
    importpath = "github.com/macadmins/osquery-extension/tables/wifi_network",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_osquery_osquery_go//:go_default_library",
        "@com_github_osquery_osquery_go//plugin/table:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "wifi_network_test",
    srcs = ["wifi_network_test.go"],
    embed = [":wifi_network"],
    embedsrcs = ["wdutil_out.txt"],
    deps = [
        "//pkg/utils",
        "@com_github_osquery_osquery_go//plugin/table:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
